# XMotion

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  NOTICE  README.md  ROADMAP.md  TODO.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt
bench/imu_attitude/: CMakeLists.txt  main.cpp
branding/: README.md
branding/preview/: explorer.html  index.html
cmake/: README.md
components/: README.md
docs/: LESSONS.md
docs/adr/: 0001-component-architecture.md  0002-repo-transition-plan.md  0003-naming-and-branding.md  0004-telemetry-layering.md  0005-application-level-composition.md  0006-messaging-layer.md  0007-module-placement.md
docs/design/: observability-budget.md  telemetry-library-design.md
docs/research/: otel-robotics-telemetry.bib  otel-robotics-telemetry.typ
docs/research/template/: techreport.typ
